[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shapley-weighting-refimpl"
version = "0.1.0"
description = "Reference implementation of Shapley Weighting (PAKDD 2026)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["numpy", "pandas", "scikit-learn"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
